modified discriminator to return logits instead of sigmoid. Loss used in training is now BCE with logits

--- a/config/template.ini
+++ b/config/template.ini
@@ -1,5 +1,5 @@
 [experiment]
-id=FirstTest
+id=SecondTest
 dataset=sine_data.npy
 
 [model]
@@ -21,6 +21,6 @@ epochs=2000
 batch_size=100
 discriminator_loops_per_epoch=1
 generator_loops_per_epoch=1
-learning_rate=0.0002
+learning_rate=0.00001
 split_train=0.8
 multi_gpu=false
