changed settings for revisiting milestone

--- a/config/revisit_milestone_lr1e-5.ini
+++ b/config/revisit_milestone_lr1e-5.ini
@@ -1,5 +1,5 @@
 [experiment]
-id=revisit_milestone
+id=revisit_milestone_lr1e-5
 dataset=GW20KSEF200l.npy
 
 [model]
@@ -17,8 +17,8 @@ discriminator_RNN_layers = 1
 [training]
 use_cuda=true
 shuffle=true
-epochs=2000
-batch_size=30
+epochs=6000
+batch_size=300
 discriminator_loops_per_epoch=4
 generator_loops_per_epoch=1
 learning_rate=0.00001
